new measure 'mean quadratic weighted kappa'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -962,6 +962,7 @@ export(measureMCC)
 export(measureMEDAE)
 export(measureMEDSE)
 export(measureMMCE)
+export(measureMQWK)
 export(measureMSE)
 export(measureMultiLabelF1)
 export(measureMulticlassBrier)
@@ -990,6 +991,7 @@ export(mergeBenchmarkResultLearner)
 export(mergeBenchmarkResultTask)
 export(mergeSmallFactorLevels)
 export(mmce)
+export(mqwk)
 export(mse)
 export(multiclass.au1p)
 export(multiclass.au1u)
