rename to wk and fix typo in note

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -961,8 +961,8 @@ export(measureMAPE)
 export(measureMCC)
 export(measureMEDAE)
 export(measureMEDSE)
+export(measureMK)
 export(measureMMCE)
-export(measureMQWK)
 export(measureMSE)
 export(measureMultiLabelF1)
 export(measureMulticlassBrier)
@@ -991,7 +991,6 @@ export(mergeBenchmarkResultLearner)
 export(mergeBenchmarkResultTask)
 export(mergeSmallFactorLevels)
 export(mmce)
-export(mqwk)
 export(mse)
 export(multiclass.au1p)
 export(multiclass.au1u)
@@ -1088,6 +1087,7 @@ export(tuneParams)
 export(tuneParamsMultiCrit)
 export(tuneThreshold)
 export(undersample)
+export(wk)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
