yet another typo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -961,7 +961,6 @@ export(measureMAPE)
 export(measureMCC)
 export(measureMEDAE)
 export(measureMEDSE)
-export(measureMK)
 export(measureMMCE)
 export(measureMSE)
 export(measureMultiLabelF1)
@@ -985,6 +984,7 @@ export(measureTN)
 export(measureTNR)
 export(measureTP)
 export(measureTPR)
+export(measureWK)
 export(medae)
 export(medse)
 export(mergeBenchmarkResultLearner)
