--- a/NAMESPACE
+++ b/NAMESPACE
@@ -288,6 +288,7 @@ S3method(plotViperCharts,BenchmarkResult)
 S3method(plotViperCharts,Prediction)
 S3method(plotViperCharts,ResampleResult)
 S3method(plotViperCharts,list)
+S3method(predict,WrappedModel)
 S3method(predictLearner,BaggingWrapper)
 S3method(predictLearner,BaseWrapper)
 S3method(predictLearner,ConstantClassWrapper)
@@ -1026,7 +1027,6 @@ export(plotTuneMultiCritResult)
 export(plotTuneMultiCritResultGGVIS)
 export(plotViperCharts)
 export(ppv)
-export(predict.WrappedModel)
 export(predictLearner)
 export(qsr)
 export(rae)
