--- a/NAMESPACE
+++ b/NAMESPACE
@@ -860,6 +860,7 @@ export(imputeNormal)
 export(imputeUniform)
 export(isFailureModel)
 export(joinClassLevels)
+export(kappa)
 export(learnerArgsToControl)
 export(listFilterMethods)
 export(listLearners)
@@ -954,6 +955,7 @@ export(measureFP)
 export(measureFPR)
 export(measureGMEAN)
 export(measureGPR)
+export(measureKAPPA)
 export(measureLSR)
 export(measureLogloss)
 export(measureMAE)
@@ -984,7 +986,7 @@ export(measureTN)
 export(measureTNR)
 export(measureTP)
 export(measureTPR)
-export(measureWK)
+export(measureWKAPPA)
 export(medae)
 export(medse)
 export(mergeBenchmarkResultLearner)
@@ -1087,7 +1089,7 @@ export(tuneParams)
 export(tuneParamsMultiCrit)
 export(tuneThreshold)
 export(undersample)
-export(wk)
+export(wkappa)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
