listLearners output as S3 class with print (#1213)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -497,6 +497,7 @@ S3method(print,HyperParsEffectData)
 S3method(print,ImputationDesc)
 S3method(print,Learner)
 S3method(print,LearningCurveData)
+S3method(print,ListLearners)
 S3method(print,Measure)
 S3method(print,MultilabelTask)
 S3method(print,OptModel)
